@@ -1,5 +1,5 @@
 /*
- * Copyright 2018 The Android Open Source Project
+ * Copyright (C) 2018 The Android Open Source Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,9 +16,23 @@
 
 package com.android.bluetooth.hfp;
 
+import static android.bluetooth.BluetoothProfile.CONNECTION_POLICY_ALLOWED;
+import static android.bluetooth.BluetoothProfile.CONNECTION_POLICY_FORBIDDEN;
+import static android.bluetooth.BluetoothProfile.CONNECTION_POLICY_UNKNOWN;
+import static android.bluetooth.BluetoothProfile.STATE_CONNECTED;
+import static android.bluetooth.BluetoothProfile.STATE_CONNECTING;
+import static android.bluetooth.BluetoothProfile.STATE_DISCONNECTED;
+
+import static com.android.bluetooth.TestUtils.MockitoRule;
+import static com.android.bluetooth.TestUtils.getTestDevice;
+
+import static com.google.common.truth.Truth.assertThat;
+
+import static org.junit.Assert.assertThrows;
 import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.anyBoolean;
 import static org.mockito.Mockito.anyInt;
+import static org.mockito.Mockito.atLeast;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doReturn;
@@ -31,7 +45,7 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
-import android.bluetooth.BluetoothAdapter;
+import android.bluetooth.BluetoothClass;
 import android.bluetooth.BluetoothDevice;
 import android.bluetooth.BluetoothHeadset;
 import android.bluetooth.BluetoothProfile;
@@ -43,9 +57,10 @@ import android.media.AudioManager;
 import android.os.ParcelUuid;
 import android.os.RemoteException;
 import android.os.SystemClock;
+import android.platform.test.annotations.EnableFlags;
 
-import androidx.test.InstrumentationRegistry;
 import androidx.test.filters.MediumTest;
+import androidx.test.platform.app.InstrumentationRegistry;
 import androidx.test.runner.AndroidJUnit4;
 
 import com.android.bluetooth.TestUtils;
@@ -56,28 +71,24 @@ import com.android.bluetooth.btservice.SilenceDeviceManager;
 import com.android.bluetooth.btservice.storage.DatabaseManager;
 import com.android.bluetooth.flags.Flags;
 
-import org.hamcrest.Matchers;
 import org.junit.After;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.Spy;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Set;
 
-/** Tests for {@link HeadsetService} */
+/** Test cases for {@link HeadsetService}. */
 @MediumTest
 @RunWith(AndroidJUnit4.class)
 public class HeadsetServiceTest {
-    @Rule public MockitoRule mockitoRule = MockitoJUnit.rule();
+    @Rule public final MockitoRule mMockitoRule = new MockitoRule();
 
     @Spy private HeadsetObjectsFactory mObjectsFactory = HeadsetObjectsFactory.getInstance();
 
@@ -96,8 +107,8 @@ public class HeadsetServiceTest {
     private static final int ASYNC_CALL_TIMEOUT_MILLIS = 250;
     private static final String TEST_PHONE_NUMBER = "1234567890";
 
-    private final BluetoothAdapter mAdapter = BluetoothAdapter.getDefaultAdapter();
-    private final Context mTargetContext = InstrumentationRegistry.getTargetContext();
+    private final Context mTargetContext =
+            InstrumentationRegistry.getInstrumentation().getTargetContext();
     private final HashMap<BluetoothDevice, HeadsetStateMachine> mStateMachines = new HashMap<>();
 
     private HeadsetService mHeadsetService;
@@ -153,12 +164,10 @@ public class HeadsetServiceTest {
         // Mock methods in HeadsetObjectsFactory
         doAnswer(
                         invocation -> {
-                            Assert.assertNotNull(mCurrentDevice);
+                            assertThat(mCurrentDevice).isNotNull();
                             final HeadsetStateMachine stateMachine =
                                     mock(HeadsetStateMachine.class);
-                            doReturn(BluetoothProfile.STATE_DISCONNECTED)
-                                    .when(stateMachine)
-                                    .getConnectionState();
+                            doReturn(STATE_DISCONNECTED).when(stateMachine).getConnectionState();
                             doReturn(BluetoothHeadset.STATE_AUDIO_DISCONNECTED)
                                     .when(stateMachine)
                                     .getAudioState();
@@ -170,7 +179,6 @@ public class HeadsetServiceTest {
         doReturn(mSystemInterface).when(mObjectsFactory).makeSystemInterface(any());
         HeadsetNativeInterface.setInstance(mNativeInterface);
         mHeadsetService = new HeadsetService(mAdapterService, mNativeInterface);
-        mHeadsetService.start();
         mHeadsetService.setAvailable(true);
         verify(mObjectsFactory).makeSystemInterface(mHeadsetService);
         mHeadsetService.setForceScoAudio(true);
@@ -178,10 +186,10 @@ public class HeadsetServiceTest {
 
     @After
     public void tearDown() throws Exception {
-        mHeadsetService.stop();
+        mHeadsetService.cleanup();
         HeadsetNativeInterface.setInstance(null);
         mHeadsetService = HeadsetService.getHeadsetService();
-        Assert.assertNull(mHeadsetService);
+        assertThat(mHeadsetService).isNull();
         mStateMachines.clear();
         mCurrentDevice = null;
         HeadsetObjectsFactory.setInstanceForTesting(null);
@@ -190,85 +198,68 @@ public class HeadsetServiceTest {
     /** Test to verify that HeadsetService can be successfully started */
     @Test
     public void testGetHeadsetService() {
-        Assert.assertEquals(mHeadsetService, HeadsetService.getHeadsetService());
+        assertThat(HeadsetService.getHeadsetService()).isEqualTo(mHeadsetService);
         // Verify default connection and audio states
-        mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_DISCONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertEquals(
-                BluetoothHeadset.STATE_AUDIO_DISCONNECTED,
-                mHeadsetService.getAudioState(mCurrentDevice));
+        mCurrentDevice = getTestDevice(0);
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                .isEqualTo(STATE_DISCONNECTED);
+        assertThat(mHeadsetService.getAudioState(mCurrentDevice))
+                .isEqualTo(BluetoothHeadset.STATE_AUDIO_DISCONNECTED);
     }
 
     /** Test okToAcceptConnection method using various test cases */
     @Test
     public void testOkToAcceptConnection() {
-        mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
+        mCurrentDevice = getTestDevice(0);
         int badPriorityValue = 1024;
         int badBondState = 42;
         testOkToAcceptConnectionCase(
                 mCurrentDevice,
                 BluetoothDevice.BOND_NONE,
-                BluetoothProfile.CONNECTION_POLICY_UNKNOWN,
+                CONNECTION_POLICY_UNKNOWN,
                 Flags.donotValidateBondStateFromProfiles());
         testOkToAcceptConnectionCase(
-                mCurrentDevice,
-                BluetoothDevice.BOND_NONE,
-                BluetoothProfile.CONNECTION_POLICY_FORBIDDEN,
-                false);
+                mCurrentDevice, BluetoothDevice.BOND_NONE, CONNECTION_POLICY_FORBIDDEN, false);
         testOkToAcceptConnectionCase(
                 mCurrentDevice,
                 BluetoothDevice.BOND_NONE,
-                BluetoothProfile.CONNECTION_POLICY_ALLOWED,
+                CONNECTION_POLICY_ALLOWED,
                 Flags.donotValidateBondStateFromProfiles());
         testOkToAcceptConnectionCase(
                 mCurrentDevice, BluetoothDevice.BOND_NONE, badPriorityValue, false);
         testOkToAcceptConnectionCase(
                 mCurrentDevice,
                 BluetoothDevice.BOND_BONDING,
-                BluetoothProfile.CONNECTION_POLICY_UNKNOWN,
+                CONNECTION_POLICY_UNKNOWN,
                 Flags.donotValidateBondStateFromProfiles());
         testOkToAcceptConnectionCase(
-                mCurrentDevice,
-                BluetoothDevice.BOND_BONDING,
-                BluetoothProfile.CONNECTION_POLICY_FORBIDDEN,
-                false);
+                mCurrentDevice, BluetoothDevice.BOND_BONDING, CONNECTION_POLICY_FORBIDDEN, false);
         testOkToAcceptConnectionCase(
                 mCurrentDevice,
                 BluetoothDevice.BOND_BONDING,
-                BluetoothProfile.CONNECTION_POLICY_ALLOWED,
+                CONNECTION_POLICY_ALLOWED,
                 Flags.donotValidateBondStateFromProfiles());
         testOkToAcceptConnectionCase(
                 mCurrentDevice, BluetoothDevice.BOND_BONDING, badPriorityValue, false);
         testOkToAcceptConnectionCase(
-                mCurrentDevice,
-                BluetoothDevice.BOND_BONDED,
-                BluetoothProfile.CONNECTION_POLICY_UNKNOWN,
-                true);
+                mCurrentDevice, BluetoothDevice.BOND_BONDED, CONNECTION_POLICY_UNKNOWN, true);
         testOkToAcceptConnectionCase(
-                mCurrentDevice,
-                BluetoothDevice.BOND_BONDED,
-                BluetoothProfile.CONNECTION_POLICY_FORBIDDEN,
-                false);
+                mCurrentDevice, BluetoothDevice.BOND_BONDED, CONNECTION_POLICY_FORBIDDEN, false);
         testOkToAcceptConnectionCase(
-                mCurrentDevice,
-                BluetoothDevice.BOND_BONDED,
-                BluetoothProfile.CONNECTION_POLICY_ALLOWED,
-                true);
+                mCurrentDevice, BluetoothDevice.BOND_BONDED, CONNECTION_POLICY_ALLOWED, true);
         testOkToAcceptConnectionCase(
                 mCurrentDevice, BluetoothDevice.BOND_BONDED, badPriorityValue, false);
         testOkToAcceptConnectionCase(
                 mCurrentDevice,
                 badBondState,
-                BluetoothProfile.CONNECTION_POLICY_UNKNOWN,
+                CONNECTION_POLICY_UNKNOWN,
                 Flags.donotValidateBondStateFromProfiles());
         testOkToAcceptConnectionCase(
-                mCurrentDevice, badBondState, BluetoothProfile.CONNECTION_POLICY_FORBIDDEN, false);
+                mCurrentDevice, badBondState, CONNECTION_POLICY_FORBIDDEN, false);
         testOkToAcceptConnectionCase(
                 mCurrentDevice,
                 badBondState,
-                BluetoothProfile.CONNECTION_POLICY_ALLOWED,
+                CONNECTION_POLICY_ALLOWED,
                 Flags.donotValidateBondStateFromProfiles());
         testOkToAcceptConnectionCase(mCurrentDevice, badBondState, badPriorityValue, false);
     }
@@ -282,9 +273,9 @@ public class HeadsetServiceTest {
     public void testConnectDevice_connectDeviceBelowLimit() {
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
-                .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
-        mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
-        Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
+        mCurrentDevice = getTestDevice(0);
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
         verify(mObjectsFactory)
                 .makeStateMachine(
                         mCurrentDevice,
@@ -296,20 +287,13 @@ public class HeadsetServiceTest {
         verify(mStateMachines.get(mCurrentDevice))
                 .sendMessage(HeadsetStateMachine.CONNECT, mCurrentDevice);
         when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
-        when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                .thenReturn(BluetoothProfile.STATE_CONNECTING);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTING,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                .thenReturn(BluetoothProfile.STATE_CONNECTED);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertEquals(
-                Collections.singletonList(mCurrentDevice), mHeadsetService.getConnectedDevices());
+        when(mStateMachines.get(mCurrentDevice).getConnectionState()).thenReturn(STATE_CONNECTING);
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice)).isEqualTo(STATE_CONNECTING);
+        when(mStateMachines.get(mCurrentDevice).getConnectionState()).thenReturn(STATE_CONNECTED);
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice)).isEqualTo(STATE_CONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices()).isEqualTo(List.of(mCurrentDevice));
         // 2nd connection attempt will fail
-        Assert.assertFalse(mHeadsetService.connect(mCurrentDevice));
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isFalse();
         // Verify makeStateMachine is only called once
         verify(mObjectsFactory).makeStateMachine(any(), any(), any(), any(), any(), any());
         // Verify CONNECT is only sent once
@@ -323,7 +307,7 @@ public class HeadsetServiceTest {
      */
     @Test
     public void testMessageFromNative_deviceConnected() {
-        mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
+        mCurrentDevice = getTestDevice(0);
         // Test connect from native
         HeadsetStackEvent connectedEvent =
                 new HeadsetStackEvent(
@@ -342,13 +326,9 @@ public class HeadsetServiceTest {
         verify(mStateMachines.get(mCurrentDevice))
                 .sendMessage(HeadsetStateMachine.STACK_EVENT, connectedEvent);
         when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
-        when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                .thenReturn(BluetoothProfile.STATE_CONNECTED);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertEquals(
-                Collections.singletonList(mCurrentDevice), mHeadsetService.getConnectedDevices());
+        when(mStateMachines.get(mCurrentDevice).getConnectionState()).thenReturn(STATE_CONNECTED);
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice)).isEqualTo(STATE_CONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices()).isEqualTo(List.of(mCurrentDevice));
         // Test disconnect from native
         HeadsetStackEvent disconnectEvent =
                 new HeadsetStackEvent(
@@ -359,11 +339,10 @@ public class HeadsetServiceTest {
         verify(mStateMachines.get(mCurrentDevice))
                 .sendMessage(HeadsetStateMachine.STACK_EVENT, disconnectEvent);
         when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                .thenReturn(BluetoothProfile.STATE_DISCONNECTED);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_DISCONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertEquals(Collections.EMPTY_LIST, mHeadsetService.getConnectedDevices());
+                .thenReturn(STATE_DISCONNECTED);
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                .isEqualTo(STATE_DISCONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices()).isEmpty();
     }
 
     /**
@@ -372,7 +351,7 @@ public class HeadsetServiceTest {
      */
     @Test
     public void testMessageFromNative_deviceConnectingUnknown() {
-        mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
+        mCurrentDevice = getTestDevice(0);
         HeadsetStackEvent connectingEvent =
                 new HeadsetStackEvent(
                         HeadsetStackEvent.EVENT_TYPE_CONNECTION_STATE_CHANGED,
@@ -397,18 +376,15 @@ public class HeadsetServiceTest {
      */
     @Test
     public void testMessageFromNative_deviceDisconnectedUnknown() {
-        mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
+        mCurrentDevice = getTestDevice(0);
         HeadsetStackEvent connectingEvent =
                 new HeadsetStackEvent(
                         HeadsetStackEvent.EVENT_TYPE_CONNECTION_STATE_CHANGED,
                         HeadsetHalConstants.CONNECTION_STATE_DISCONNECTED,
                         mCurrentDevice);
-        try {
-            mHeadsetService.messageFromNative(connectingEvent);
-            Assert.fail("Expect an IllegalStateException");
-        } catch (IllegalStateException exception) {
-            // Do nothing
-        }
+        assertThrows(
+                IllegalStateException.class,
+                () -> mHeadsetService.messageFromNative(connectingEvent));
         verifyNoMoreInteractions(mObjectsFactory);
     }
 
@@ -421,10 +397,10 @@ public class HeadsetServiceTest {
         ArrayList<BluetoothDevice> connectedDevices = new ArrayList<>();
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
-                .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
         for (int i = 0; i < MAX_HEADSET_CONNECTIONS; ++i) {
-            mCurrentDevice = TestUtils.getTestDevice(mAdapter, i);
-            Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+            mCurrentDevice = getTestDevice(i);
+            assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
             verify(mObjectsFactory)
                     .makeStateMachine(
                             mCurrentDevice,
@@ -447,25 +423,22 @@ public class HeadsetServiceTest {
                     .sendMessage(eq(HeadsetStateMachine.CONNECT), any(BluetoothDevice.class));
             // Put device to connecting
             when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                    .thenReturn(BluetoothProfile.STATE_CONNECTING);
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+                    .thenReturn(STATE_CONNECTING);
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             // Put device to connected
             connectedDevices.add(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                    .thenReturn(BluetoothProfile.STATE_CONNECTED);
-            Assert.assertEquals(
-                    BluetoothProfile.STATE_CONNECTED,
-                    mHeadsetService.getConnectionState(mCurrentDevice));
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+                    .thenReturn(STATE_CONNECTED);
+            assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                    .isEqualTo(STATE_CONNECTED);
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
         }
         // Connect the next device will fail
-        mCurrentDevice = TestUtils.getTestDevice(mAdapter, MAX_HEADSET_CONNECTIONS);
-        Assert.assertFalse(mHeadsetService.connect(mCurrentDevice));
+        mCurrentDevice = getTestDevice(MAX_HEADSET_CONNECTIONS);
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isFalse();
         // Though connection failed, a new state machine is still lazily created for the device
         verify(mObjectsFactory, times(MAX_HEADSET_CONNECTIONS + 1))
                 .makeStateMachine(
@@ -475,12 +448,10 @@ public class HeadsetServiceTest {
                         eq(mAdapterService),
                         eq(mNativeInterface),
                         eq(mSystemInterface));
-        Assert.assertEquals(
-                BluetoothProfile.STATE_DISCONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertThat(
-                mHeadsetService.getConnectedDevices(),
-                Matchers.containsInAnyOrder(connectedDevices.toArray()));
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                .isEqualTo(STATE_DISCONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices())
+                .containsExactlyElementsIn(connectedDevices);
     }
 
     /**
@@ -492,9 +463,9 @@ public class HeadsetServiceTest {
     public void testConnectAudio_withOneDevice() {
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
-                .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
-        mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
-        Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
+        mCurrentDevice = getTestDevice(0);
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
         verify(mObjectsFactory)
                 .makeStateMachine(
                         mCurrentDevice,
@@ -506,44 +477,37 @@ public class HeadsetServiceTest {
         verify(mStateMachines.get(mCurrentDevice))
                 .sendMessage(HeadsetStateMachine.CONNECT, mCurrentDevice);
         when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
-        when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                .thenReturn(BluetoothProfile.STATE_CONNECTED);
+        when(mStateMachines.get(mCurrentDevice).getConnectionState()).thenReturn(STATE_CONNECTED);
         when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                 .thenReturn(SystemClock.uptimeMillis());
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertEquals(
-                Collections.singletonList(mCurrentDevice), mHeadsetService.getConnectedDevices());
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice)).isEqualTo(STATE_CONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices()).isEqualTo(List.of(mCurrentDevice));
         mHeadsetService.onConnectionStateChangedFromStateMachine(
-                mCurrentDevice,
-                BluetoothProfile.STATE_DISCONNECTED,
-                BluetoothProfile.STATE_CONNECTED);
+                mCurrentDevice, STATE_DISCONNECTED, STATE_CONNECTED);
         // Test connect audio - set the device first as the active device
-        Assert.assertTrue(mHeadsetService.setActiveDevice(mCurrentDevice));
-        Assert.assertEquals(
-                BluetoothStatusCodes.SUCCESS, mHeadsetService.connectAudio(mCurrentDevice));
+        assertThat(mHeadsetService.setActiveDevice(mCurrentDevice)).isTrue();
+        assertThat(mHeadsetService.connectAudio(mCurrentDevice))
+                .isEqualTo(BluetoothStatusCodes.SUCCESS);
         verify(mStateMachines.get(mCurrentDevice))
                 .sendMessage(HeadsetStateMachine.CONNECT_AUDIO, mCurrentDevice);
         when(mStateMachines.get(mCurrentDevice).getAudioState())
                 .thenReturn(BluetoothHeadset.STATE_AUDIO_CONNECTING);
         // 2nd connection attempt for the same device will succeed as well
-        Assert.assertEquals(
-                BluetoothStatusCodes.SUCCESS, mHeadsetService.connectAudio(mCurrentDevice));
+        assertThat(mHeadsetService.connectAudio(mCurrentDevice))
+                .isEqualTo(BluetoothStatusCodes.SUCCESS);
         // Verify CONNECT_AUDIO is only sent once
         verify(mStateMachines.get(mCurrentDevice))
                 .sendMessage(eq(HeadsetStateMachine.CONNECT_AUDIO), any());
         // Test disconnect audio
-        Assert.assertEquals(
-                BluetoothStatusCodes.SUCCESS, mHeadsetService.disconnectAudio(mCurrentDevice));
+        assertThat(mHeadsetService.disconnectAudio(mCurrentDevice))
+                .isEqualTo(BluetoothStatusCodes.SUCCESS);
         verify(mStateMachines.get(mCurrentDevice))
                 .sendMessage(HeadsetStateMachine.DISCONNECT_AUDIO, mCurrentDevice);
         when(mStateMachines.get(mCurrentDevice).getAudioState())
                 .thenReturn(BluetoothHeadset.STATE_AUDIO_DISCONNECTED);
         // Further disconnection requests will fail
-        Assert.assertEquals(
-                BluetoothStatusCodes.ERROR_AUDIO_DEVICE_ALREADY_DISCONNECTED,
-                mHeadsetService.disconnectAudio(mCurrentDevice));
+        assertThat(mHeadsetService.disconnectAudio(mCurrentDevice))
+                .isEqualTo(BluetoothStatusCodes.ERROR_AUDIO_DEVICE_ALREADY_DISCONNECTED);
         verify(mStateMachines.get(mCurrentDevice))
                 .sendMessage(eq(HeadsetStateMachine.DISCONNECT_AUDIO), any(BluetoothDevice.class));
     }
@@ -557,10 +521,10 @@ public class HeadsetServiceTest {
         ArrayList<BluetoothDevice> connectedDevices = new ArrayList<>();
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
-                .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
         for (int i = 0; i < MAX_HEADSET_CONNECTIONS; ++i) {
-            mCurrentDevice = TestUtils.getTestDevice(mAdapter, i);
-            Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+            mCurrentDevice = getTestDevice(i);
+            assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
             verify(mObjectsFactory)
                     .makeStateMachine(
                             mCurrentDevice,
@@ -583,48 +547,40 @@ public class HeadsetServiceTest {
                     .sendMessage(eq(HeadsetStateMachine.CONNECT), any(BluetoothDevice.class));
             // Put device to connecting
             when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                    .thenReturn(BluetoothProfile.STATE_CONNECTING);
+                    .thenReturn(STATE_CONNECTING);
             mHeadsetService.onConnectionStateChangedFromStateMachine(
-                    mCurrentDevice,
-                    BluetoothProfile.STATE_DISCONNECTED,
-                    BluetoothProfile.STATE_CONNECTING);
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+                    mCurrentDevice, STATE_DISCONNECTED, STATE_CONNECTING);
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             // Put device to connected
             connectedDevices.add(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                    .thenReturn(BluetoothProfile.STATE_CONNECTED);
+                    .thenReturn(STATE_CONNECTED);
             when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                     .thenReturn(SystemClock.uptimeMillis());
-            Assert.assertEquals(
-                    BluetoothProfile.STATE_CONNECTED,
-                    mHeadsetService.getConnectionState(mCurrentDevice));
+            assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                    .isEqualTo(STATE_CONNECTED);
             mHeadsetService.onConnectionStateChangedFromStateMachine(
-                    mCurrentDevice,
-                    BluetoothProfile.STATE_CONNECTING,
-                    BluetoothProfile.STATE_CONNECTED);
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+                    mCurrentDevice, STATE_CONNECTING, STATE_CONNECTED);
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             // Try to connect audio
             // Should fail
-            Assert.assertEquals(
-                    BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE,
-                    mHeadsetService.connectAudio(mCurrentDevice));
+            assertThat(mHeadsetService.connectAudio(mCurrentDevice))
+                    .isEqualTo(BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE);
             // Should succeed after setActiveDevice()
-            Assert.assertTrue(mHeadsetService.setActiveDevice(mCurrentDevice));
-            Assert.assertEquals(
-                    BluetoothStatusCodes.SUCCESS, mHeadsetService.connectAudio(mCurrentDevice));
+            assertThat(mHeadsetService.setActiveDevice(mCurrentDevice)).isTrue();
+            assertThat(mHeadsetService.connectAudio(mCurrentDevice))
+                    .isEqualTo(BluetoothStatusCodes.SUCCESS);
             verify(mStateMachines.get(mCurrentDevice))
                     .sendMessage(HeadsetStateMachine.CONNECT_AUDIO, mCurrentDevice);
             // Put device to audio connecting state
             when(mStateMachines.get(mCurrentDevice).getAudioState())
                     .thenReturn(BluetoothHeadset.STATE_AUDIO_CONNECTING);
             // 2nd connection attempt will also succeed
-            Assert.assertEquals(
-                    BluetoothStatusCodes.SUCCESS, mHeadsetService.connectAudio(mCurrentDevice));
+            assertThat(mHeadsetService.connectAudio(mCurrentDevice))
+                    .isEqualTo(BluetoothStatusCodes.SUCCESS);
             // Verify CONNECT_AUDIO is only sent once
             verify(mStateMachines.get(mCurrentDevice))
                     .sendMessage(eq(HeadsetStateMachine.CONNECT_AUDIO), any());
@@ -632,16 +588,15 @@ public class HeadsetServiceTest {
             when(mStateMachines.get(mCurrentDevice).getAudioState())
                     .thenReturn(BluetoothHeadset.STATE_AUDIO_CONNECTED);
             // Disconnect audio
-            Assert.assertEquals(
-                    BluetoothStatusCodes.SUCCESS, mHeadsetService.disconnectAudio(mCurrentDevice));
+            assertThat(mHeadsetService.disconnectAudio(mCurrentDevice))
+                    .isEqualTo(BluetoothStatusCodes.SUCCESS);
             verify(mStateMachines.get(mCurrentDevice))
                     .sendMessage(HeadsetStateMachine.DISCONNECT_AUDIO, mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getAudioState())
                     .thenReturn(BluetoothHeadset.STATE_AUDIO_DISCONNECTED);
             // Further disconnection requests will fail
-            Assert.assertEquals(
-                    BluetoothStatusCodes.ERROR_AUDIO_DEVICE_ALREADY_DISCONNECTED,
-                    mHeadsetService.disconnectAudio(mCurrentDevice));
+            assertThat(mHeadsetService.disconnectAudio(mCurrentDevice))
+                    .isEqualTo(BluetoothStatusCodes.ERROR_AUDIO_DEVICE_ALREADY_DISCONNECTED);
             verify(mStateMachines.get(mCurrentDevice))
                     .sendMessage(
                             eq(HeadsetStateMachine.DISCONNECT_AUDIO), any(BluetoothDevice.class));
@@ -658,10 +613,10 @@ public class HeadsetServiceTest {
         ArrayList<BluetoothDevice> connectedDevices = new ArrayList<>();
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
-                .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
         for (int i = 0; i < MAX_HEADSET_CONNECTIONS; ++i) {
-            mCurrentDevice = TestUtils.getTestDevice(mAdapter, i);
-            Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+            mCurrentDevice = getTestDevice(i);
+            assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
             verify(mObjectsFactory)
                     .makeStateMachine(
                             mCurrentDevice,
@@ -684,61 +639,52 @@ public class HeadsetServiceTest {
                     .sendMessage(eq(HeadsetStateMachine.CONNECT), any(BluetoothDevice.class));
             // Put device to connecting
             when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                    .thenReturn(BluetoothProfile.STATE_CONNECTING);
+                    .thenReturn(STATE_CONNECTING);
             mHeadsetService.onConnectionStateChangedFromStateMachine(
-                    mCurrentDevice,
-                    BluetoothProfile.STATE_DISCONNECTED,
-                    BluetoothProfile.STATE_CONNECTING);
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+                    mCurrentDevice, STATE_DISCONNECTED, STATE_CONNECTING);
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             // Put device to connected
             connectedDevices.add(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                    .thenReturn(BluetoothProfile.STATE_CONNECTED);
+                    .thenReturn(STATE_CONNECTED);
             when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                     .thenReturn(SystemClock.uptimeMillis());
             mHeadsetService.onConnectionStateChangedFromStateMachine(
-                    mCurrentDevice,
-                    BluetoothProfile.STATE_CONNECTING,
-                    BluetoothProfile.STATE_CONNECTED);
-            Assert.assertEquals(
-                    BluetoothProfile.STATE_CONNECTED,
-                    mHeadsetService.getConnectionState(mCurrentDevice));
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+                    mCurrentDevice, STATE_CONNECTING, STATE_CONNECTED);
+            assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                    .isEqualTo(STATE_CONNECTED);
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
         }
         if (MAX_HEADSET_CONNECTIONS >= 2) {
             // Try to connect audio
             BluetoothDevice firstDevice = connectedDevices.get(0);
             BluetoothDevice secondDevice = connectedDevices.get(1);
             // Set the first device as the active device
-            Assert.assertTrue(mHeadsetService.setActiveDevice(firstDevice));
-            Assert.assertEquals(
-                    BluetoothStatusCodes.SUCCESS, mHeadsetService.connectAudio(firstDevice));
+            assertThat(mHeadsetService.setActiveDevice(firstDevice)).isTrue();
+            assertThat(mHeadsetService.connectAudio(firstDevice))
+                    .isEqualTo(BluetoothStatusCodes.SUCCESS);
             verify(mStateMachines.get(firstDevice))
                     .sendMessage(HeadsetStateMachine.CONNECT_AUDIO, firstDevice);
             // Put device to audio connecting state
             when(mStateMachines.get(firstDevice).getAudioState())
                     .thenReturn(BluetoothHeadset.STATE_AUDIO_CONNECTING);
             // 2nd connection attempt will succeed for the same device
-            Assert.assertEquals(
-                    BluetoothStatusCodes.SUCCESS, mHeadsetService.connectAudio(firstDevice));
+            assertThat(mHeadsetService.connectAudio(firstDevice))
+                    .isEqualTo(BluetoothStatusCodes.SUCCESS);
             // Connect to 2nd device will fail
-            Assert.assertEquals(
-                    BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE,
-                    mHeadsetService.connectAudio(secondDevice));
+            assertThat(mHeadsetService.connectAudio(secondDevice))
+                    .isEqualTo(BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE);
             verify(mStateMachines.get(secondDevice), never())
                     .sendMessage(HeadsetStateMachine.CONNECT_AUDIO, secondDevice);
             // Put device to audio connected state
             when(mStateMachines.get(firstDevice).getAudioState())
                     .thenReturn(BluetoothHeadset.STATE_AUDIO_CONNECTED);
             // Connect to 2nd device will fail
-            Assert.assertEquals(
-                    BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE,
-                    mHeadsetService.connectAudio(secondDevice));
+            assertThat(mHeadsetService.connectAudio(secondDevice))
+                    .isEqualTo(BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE);
             verify(mStateMachines.get(secondDevice), never())
                     .sendMessage(HeadsetStateMachine.CONNECT_AUDIO, secondDevice);
         }
@@ -753,7 +699,7 @@ public class HeadsetServiceTest {
         ArrayList<BluetoothDevice> connectedDevices = new ArrayList<>();
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
-                .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
         doAnswer(
                         invocation -> {
                             BluetoothDevice[] devicesArray =
@@ -763,8 +709,8 @@ public class HeadsetServiceTest {
                 .when(mAdapterService)
                 .getBondedDevices();
         for (int i = 0; i < MAX_HEADSET_CONNECTIONS; ++i) {
-            mCurrentDevice = TestUtils.getTestDevice(mAdapter, i);
-            Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+            mCurrentDevice = getTestDevice(i);
+            assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
             verify(mObjectsFactory)
                     .makeStateMachine(
                             mCurrentDevice,
@@ -789,36 +735,29 @@ public class HeadsetServiceTest {
             when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                     .thenReturn(SystemClock.uptimeMillis());
             when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                    .thenReturn(BluetoothProfile.STATE_CONNECTING);
+                    .thenReturn(STATE_CONNECTING);
             mHeadsetService.onConnectionStateChangedFromStateMachine(
-                    mCurrentDevice,
-                    BluetoothProfile.STATE_DISCONNECTED,
-                    BluetoothProfile.STATE_CONNECTING);
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+                    mCurrentDevice, STATE_DISCONNECTED, STATE_CONNECTING);
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             // Put device to connected
             connectedDevices.add(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                    .thenReturn(BluetoothProfile.STATE_CONNECTED);
+                    .thenReturn(STATE_CONNECTED);
             when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                     .thenReturn(SystemClock.uptimeMillis());
-            Assert.assertEquals(
-                    BluetoothProfile.STATE_CONNECTED,
-                    mHeadsetService.getConnectionState(mCurrentDevice));
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+            assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                    .isEqualTo(STATE_CONNECTED);
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             mHeadsetService.onConnectionStateChangedFromStateMachine(
-                    mCurrentDevice,
-                    BluetoothProfile.STATE_CONNECTING,
-                    BluetoothProfile.STATE_CONNECTED);
+                    mCurrentDevice, STATE_CONNECTING, STATE_CONNECTED);
         }
         // Try to connect audio
         BluetoothDevice firstDevice = connectedDevices.get(0);
-        Assert.assertTrue(mHeadsetService.setActiveDevice(firstDevice));
-        Assert.assertEquals(BluetoothStatusCodes.SUCCESS, mHeadsetService.connectAudio());
+        assertThat(mHeadsetService.setActiveDevice(firstDevice)).isTrue();
+        assertThat(mHeadsetService.connectAudio()).isEqualTo(BluetoothStatusCodes.SUCCESS);
         verify(mStateMachines.get(firstDevice))
                 .sendMessage(HeadsetStateMachine.CONNECT_AUDIO, firstDevice);
     }
@@ -829,10 +768,9 @@ public class HeadsetServiceTest {
      */
     @Test
     public void testConnectAudio_deviceNeverConnected() {
-        mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
-        Assert.assertEquals(
-                BluetoothStatusCodes.ERROR_PROFILE_NOT_CONNECTED,
-                mHeadsetService.connectAudio(mCurrentDevice));
+        mCurrentDevice = getTestDevice(0);
+        assertThat(mHeadsetService.connectAudio(mCurrentDevice))
+                .isEqualTo(BluetoothStatusCodes.ERROR_PROFILE_NOT_CONNECTED);
     }
 
     /**
@@ -843,9 +781,9 @@ public class HeadsetServiceTest {
     public void testConnectAudio_deviceDisconnected() {
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
-                .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
-        mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
-        Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
+        mCurrentDevice = getTestDevice(0);
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
         verify(mObjectsFactory)
                 .makeStateMachine(
                         mCurrentDevice,
@@ -859,19 +797,15 @@ public class HeadsetServiceTest {
         when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
         // Put device in disconnected state
         when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                .thenReturn(BluetoothProfile.STATE_DISCONNECTED);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_DISCONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertEquals(Collections.EMPTY_LIST, mHeadsetService.getConnectedDevices());
+                .thenReturn(STATE_DISCONNECTED);
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                .isEqualTo(STATE_DISCONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices()).isEmpty();
         mHeadsetService.onConnectionStateChangedFromStateMachine(
-                mCurrentDevice,
-                BluetoothProfile.STATE_CONNECTED,
-                BluetoothProfile.STATE_DISCONNECTED);
+                mCurrentDevice, STATE_CONNECTED, STATE_DISCONNECTED);
         // connectAudio should fail
-        Assert.assertEquals(
-                BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE,
-                mHeadsetService.connectAudio(mCurrentDevice));
+        assertThat(mHeadsetService.connectAudio(mCurrentDevice))
+                .isEqualTo(BluetoothStatusCodes.ERROR_NOT_ACTIVE_DEVICE);
         verify(mStateMachines.get(mCurrentDevice), never())
                 .sendMessage(eq(HeadsetStateMachine.CONNECT_AUDIO), any());
     }
@@ -916,11 +850,11 @@ public class HeadsetServiceTest {
                         0, 0, HeadsetHalConstants.CALL_STATE_IDLE, TEST_PHONE_NUMBER, 128, "");
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
-                .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
-        mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
+        mCurrentDevice = getTestDevice(0);
         final ArrayList<BluetoothDevice> connectedDevices = new ArrayList<>();
         // Connect one device
-        Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
         verify(mObjectsFactory)
                 .makeStateMachine(
                         mCurrentDevice,
@@ -935,32 +869,22 @@ public class HeadsetServiceTest {
         // Put device to connecting
         when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                 .thenReturn(SystemClock.uptimeMillis());
-        when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                .thenReturn(BluetoothProfile.STATE_CONNECTING);
+        when(mStateMachines.get(mCurrentDevice).getConnectionState()).thenReturn(STATE_CONNECTING);
         mHeadsetService.onConnectionStateChangedFromStateMachine(
-                mCurrentDevice,
-                BluetoothProfile.STATE_DISCONNECTED,
-                BluetoothProfile.STATE_CONNECTING);
-        Assert.assertThat(
-                mHeadsetService.getConnectedDevices(),
-                Matchers.containsInAnyOrder(connectedDevices.toArray()));
+                mCurrentDevice, STATE_DISCONNECTED, STATE_CONNECTING);
+        assertThat(mHeadsetService.getConnectedDevices())
+                .containsExactlyElementsIn(connectedDevices);
         // Put device to connected
         connectedDevices.add(mCurrentDevice);
         when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
-        when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                .thenReturn(BluetoothProfile.STATE_CONNECTED);
+        when(mStateMachines.get(mCurrentDevice).getConnectionState()).thenReturn(STATE_CONNECTED);
         when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                 .thenReturn(SystemClock.uptimeMillis());
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
-        Assert.assertThat(
-                mHeadsetService.getConnectedDevices(),
-                Matchers.containsInAnyOrder(connectedDevices.toArray()));
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice)).isEqualTo(STATE_CONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices())
+                .containsExactlyElementsIn(connectedDevices);
         mHeadsetService.onConnectionStateChangedFromStateMachine(
-                mCurrentDevice,
-                BluetoothProfile.STATE_CONNECTING,
-                BluetoothProfile.STATE_CONNECTED);
+                mCurrentDevice, STATE_CONNECTING, STATE_CONNECTED);
         // Change phone state
         mHeadsetService.phoneStateChanged(
                 headsetCallState.mNumActive,
@@ -984,7 +908,7 @@ public class HeadsetServiceTest {
                 mPhoneState, headsetCallState, ASYNC_CALL_TIMEOUT_MILLIS);
 
         // Set the device first as the active device
-        Assert.assertTrue(mHeadsetService.setActiveDevice(mCurrentDevice));
+        assertThat(mHeadsetService.setActiveDevice(mCurrentDevice)).isTrue();
         // Change phone state
         headsetCallState.mCallState = HeadsetHalConstants.CALL_STATE_ALERTING;
         mHeadsetService.phoneStateChanged(
@@ -1020,10 +944,10 @@ public class HeadsetServiceTest {
         final ArrayList<BluetoothDevice> connectedDevices = new ArrayList<>();
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
-                .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
         for (int i = 0; i < MAX_HEADSET_CONNECTIONS; ++i) {
-            mCurrentDevice = TestUtils.getTestDevice(mAdapter, i);
-            Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+            mCurrentDevice = getTestDevice(i);
+            assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
             verify(mObjectsFactory)
                     .makeStateMachine(
                             mCurrentDevice,
@@ -1048,32 +972,25 @@ public class HeadsetServiceTest {
             when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                     .thenReturn(SystemClock.uptimeMillis());
             when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                    .thenReturn(BluetoothProfile.STATE_CONNECTING);
+                    .thenReturn(STATE_CONNECTING);
             mHeadsetService.onConnectionStateChangedFromStateMachine(
-                    mCurrentDevice,
-                    BluetoothProfile.STATE_DISCONNECTED,
-                    BluetoothProfile.STATE_CONNECTING);
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+                    mCurrentDevice, STATE_DISCONNECTED, STATE_CONNECTING);
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             // Put device to connected
             connectedDevices.add(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                    .thenReturn(BluetoothProfile.STATE_CONNECTED);
+                    .thenReturn(STATE_CONNECTED);
             when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                     .thenReturn(SystemClock.uptimeMillis());
-            Assert.assertEquals(
-                    BluetoothProfile.STATE_CONNECTED,
-                    mHeadsetService.getConnectionState(mCurrentDevice));
-            Assert.assertThat(
-                    mHeadsetService.getConnectedDevices(),
-                    Matchers.containsInAnyOrder(connectedDevices.toArray()));
+            assertThat(mHeadsetService.getConnectionState(mCurrentDevice))
+                    .isEqualTo(STATE_CONNECTED);
+            assertThat(mHeadsetService.getConnectedDevices())
+                    .containsExactlyElementsIn(connectedDevices);
             mHeadsetService.onConnectionStateChangedFromStateMachine(
-                    mCurrentDevice,
-                    BluetoothProfile.STATE_CONNECTING,
-                    BluetoothProfile.STATE_CONNECTED);
-            Assert.assertTrue(mHeadsetService.setActiveDevice(mCurrentDevice));
+                    mCurrentDevice, STATE_CONNECTING, STATE_CONNECTED);
+            assertThat(mHeadsetService.setActiveDevice(mCurrentDevice)).isTrue();
         }
         // Change phone state
         mHeadsetService.phoneStateChanged(
@@ -1102,9 +1019,9 @@ public class HeadsetServiceTest {
     public void testClccResponse_withOneDevice() {
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
-                .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
-        mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
-        Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
+        mCurrentDevice = getTestDevice(0);
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
         verify(mObjectsFactory)
                 .makeStateMachine(
                         mCurrentDevice,
@@ -1114,11 +1031,8 @@ public class HeadsetServiceTest {
                         mNativeInterface,
                         mSystemInterface);
         when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
-        when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                .thenReturn(BluetoothProfile.STATE_CONNECTED);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTED,
-                mHeadsetService.getConnectionState(mCurrentDevice));
+        when(mStateMachines.get(mCurrentDevice).getConnectionState()).thenReturn(STATE_CONNECTED);
+        assertThat(mHeadsetService.getConnectionState(mCurrentDevice)).isEqualTo(STATE_CONNECTED);
         mHeadsetService.clccResponse(1, 0, 0, 0, false, "8225319000", 0);
         // index 0 is the end mark of CLCC response.
         mHeadsetService.clccResponse(0, 0, 0, 0, false, "8225319000", 0);
@@ -1136,10 +1050,10 @@ public class HeadsetServiceTest {
         ArrayList<BluetoothDevice> connectedDevices = new ArrayList<>();
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
-                .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
         for (int i = 2; i >= 0; i--) {
-            mCurrentDevice = TestUtils.getTestDevice(mAdapter, i);
-            Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+            mCurrentDevice = getTestDevice(i);
+            assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
             verify(mObjectsFactory)
                     .makeStateMachine(
                             mCurrentDevice,
@@ -1150,7 +1064,7 @@ public class HeadsetServiceTest {
                             mSystemInterface);
             when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                    .thenReturn(BluetoothProfile.STATE_CONNECTED);
+                    .thenReturn(STATE_CONNECTED);
             connectedDevices.add(mCurrentDevice);
             // index 0 is the end mark of CLCC response.
             mHeadsetService.clccResponse(i, 0, 0, 0, false, "8225319000", 0);
@@ -1168,38 +1082,38 @@ public class HeadsetServiceTest {
     public void testSetSilenceMode() {
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
-                .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
         for (int i = 0; i < 2; i++) {
-            mCurrentDevice = TestUtils.getTestDevice(mAdapter, i);
-            Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+            mCurrentDevice = getTestDevice(i);
+            assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
             when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
             when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                    .thenReturn(BluetoothProfile.STATE_CONNECTED);
+                    .thenReturn(STATE_CONNECTED);
             when(mStateMachines.get(mCurrentDevice).setSilenceDevice(anyBoolean()))
                     .thenReturn(true);
         }
-        mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
-        BluetoothDevice otherDevice = TestUtils.getTestDevice(mAdapter, 1);
+        mCurrentDevice = getTestDevice(0);
+        BluetoothDevice otherDevice = getTestDevice(1);
 
         // Test whether active device been removed after enable silence mode.
-        Assert.assertTrue(mHeadsetService.setActiveDevice(mCurrentDevice));
-        Assert.assertEquals(mCurrentDevice, mHeadsetService.getActiveDevice());
-        Assert.assertTrue(mHeadsetService.setSilenceMode(mCurrentDevice, true));
-        Assert.assertNull(mHeadsetService.getActiveDevice());
+        assertThat(mHeadsetService.setActiveDevice(mCurrentDevice)).isTrue();
+        assertThat(mHeadsetService.getActiveDevice()).isEqualTo(mCurrentDevice);
+        assertThat(mHeadsetService.setSilenceMode(mCurrentDevice, true)).isTrue();
+        assertThat(mHeadsetService.getActiveDevice()).isNull();
 
         // Test whether active device been resumed after disable silence mode.
-        Assert.assertTrue(mHeadsetService.setSilenceMode(mCurrentDevice, false));
-        Assert.assertEquals(mCurrentDevice, mHeadsetService.getActiveDevice());
+        assertThat(mHeadsetService.setSilenceMode(mCurrentDevice, false)).isTrue();
+        assertThat(mHeadsetService.getActiveDevice()).isEqualTo(mCurrentDevice);
 
         // Test that active device should not be changed when silence a non-active device
-        Assert.assertTrue(mHeadsetService.setActiveDevice(mCurrentDevice));
-        Assert.assertEquals(mCurrentDevice, mHeadsetService.getActiveDevice());
-        Assert.assertTrue(mHeadsetService.setSilenceMode(otherDevice, true));
-        Assert.assertEquals(mCurrentDevice, mHeadsetService.getActiveDevice());
+        assertThat(mHeadsetService.setActiveDevice(mCurrentDevice)).isTrue();
+        assertThat(mHeadsetService.getActiveDevice()).isEqualTo(mCurrentDevice);
+        assertThat(mHeadsetService.setSilenceMode(otherDevice, true)).isTrue();
+        assertThat(mHeadsetService.getActiveDevice()).isEqualTo(mCurrentDevice);
 
         // Test that active device should not be changed when another device exits silence mode
-        Assert.assertTrue(mHeadsetService.setSilenceMode(otherDevice, false));
-        Assert.assertEquals(mCurrentDevice, mHeadsetService.getActiveDevice());
+        assertThat(mHeadsetService.setSilenceMode(otherDevice, false)).isTrue();
+        assertThat(mHeadsetService.getActiveDevice()).isEqualTo(mCurrentDevice);
     }
 
     /** Test that whether active device been removed after enable silence mode */
@@ -1207,22 +1121,21 @@ public class HeadsetServiceTest {
     public void testSetActiveDevice_AudioNotAllowed() {
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
-                .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
-        mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
+        mCurrentDevice = getTestDevice(0);
         mHeadsetService.setForceScoAudio(false);
 
-        Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
         when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
-        when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                .thenReturn(BluetoothProfile.STATE_CONNECTED);
+        when(mStateMachines.get(mCurrentDevice).getConnectionState()).thenReturn(STATE_CONNECTED);
 
-        Assert.assertTrue(mHeadsetService.setActiveDevice(null));
+        assertThat(mHeadsetService.setActiveDevice(null)).isTrue();
         when(mSystemInterface.isInCall()).thenReturn(true);
         mHeadsetService.setAudioRouteAllowed(false);
 
         // Test that active device should not be changed if audio is not allowed
-        Assert.assertFalse(mHeadsetService.setActiveDevice(mCurrentDevice));
-        Assert.assertEquals(null, mHeadsetService.getActiveDevice());
+        assertThat(mHeadsetService.setActiveDevice(mCurrentDevice)).isFalse();
+        assertThat(mHeadsetService.getActiveDevice()).isNull();
     }
 
     @Test
@@ -1234,31 +1147,29 @@ public class HeadsetServiceTest {
 
     @Test
     public void testGetFallbackCandidates() {
-        BluetoothDevice deviceA = TestUtils.getTestDevice(mAdapter, 0);
-        BluetoothDevice deviceB = TestUtils.getTestDevice(mAdapter, 1);
+        BluetoothDevice deviceA = getTestDevice(0);
+        BluetoothDevice deviceB = getTestDevice(1);
         when(mDatabaseManager.getCustomMeta(any(BluetoothDevice.class), any(Integer.class)))
                 .thenReturn(null);
 
         // No connected device
-        Assert.assertTrue(mHeadsetService.getFallbackCandidates(mDatabaseManager).isEmpty());
+        assertThat(mHeadsetService.getFallbackCandidates(mDatabaseManager)).isEmpty();
 
         // One connected device
         addConnectedDeviceHelper(deviceA);
-        Assert.assertTrue(
-                mHeadsetService.getFallbackCandidates(mDatabaseManager).contains(deviceA));
+        assertThat(mHeadsetService.getFallbackCandidates(mDatabaseManager))
+                .containsExactly(deviceA);
 
         // Two connected devices
         addConnectedDeviceHelper(deviceB);
-        Assert.assertTrue(
-                mHeadsetService.getFallbackCandidates(mDatabaseManager).contains(deviceA));
-        Assert.assertTrue(
-                mHeadsetService.getFallbackCandidates(mDatabaseManager).contains(deviceB));
+        assertThat(mHeadsetService.getFallbackCandidates(mDatabaseManager))
+                .containsExactly(deviceA, deviceB);
     }
 
     @Test
     public void testGetFallbackCandidates_HasWatchDevice() {
-        BluetoothDevice deviceWatch = TestUtils.getTestDevice(mAdapter, 0);
-        BluetoothDevice deviceRegular = TestUtils.getTestDevice(mAdapter, 1);
+        BluetoothDevice deviceWatch = getTestDevice(0);
+        BluetoothDevice deviceRegular = getTestDevice(1);
 
         // Make deviceWatch a watch
         when(mDatabaseManager.getCustomMeta(deviceWatch, BluetoothDevice.METADATA_DEVICE_TYPE))
@@ -1268,34 +1179,49 @@ public class HeadsetServiceTest {
 
         // Has a connected watch device
         addConnectedDeviceHelper(deviceWatch);
-        Assert.assertTrue(mHeadsetService.getFallbackCandidates(mDatabaseManager).isEmpty());
+        assertThat(mHeadsetService.getFallbackCandidates(mDatabaseManager)).isEmpty();
 
         // Two connected devices with one watch
         addConnectedDeviceHelper(deviceRegular);
-        Assert.assertFalse(
-                mHeadsetService.getFallbackCandidates(mDatabaseManager).contains(deviceWatch));
-        Assert.assertTrue(
-                mHeadsetService.getFallbackCandidates(mDatabaseManager).contains(deviceRegular));
+        assertThat(mHeadsetService.getFallbackCandidates(mDatabaseManager))
+                .containsExactly(deviceRegular);
+    }
+
+    @Test
+    public void testGetFallbackCandidates_HasWatchDeviceWithCod() {
+        BluetoothDevice deviceWatch = getTestDevice(0);
+        BluetoothDevice deviceRegular = getTestDevice(1);
+
+        // Make deviceWatch as watch with COD
+        when(mAdapterService.getRemoteClass(deviceWatch))
+                .thenReturn(BluetoothClass.Device.WEARABLE_WRIST_WATCH);
+        when(mAdapterService.getRemoteClass(deviceRegular))
+                .thenReturn(BluetoothClass.Device.AUDIO_VIDEO_HANDSFREE);
+
+        // Has a connected watch device
+        addConnectedDeviceHelper(deviceWatch);
+        assertThat(mHeadsetService.getFallbackCandidates(mDatabaseManager)).isEmpty();
+
+        // Two connected devices with one watch
+        addConnectedDeviceHelper(deviceRegular);
+        assertThat(mHeadsetService.getFallbackCandidates(mDatabaseManager))
+                .containsExactly(deviceRegular);
     }
 
     @Test
     public void testConnectDeviceNotAllowedInbandRingPolicy_InbandRingStatus() {
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
-                .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
-        mCurrentDevice = TestUtils.getTestDevice(mAdapter, 0);
-        Assert.assertTrue(mHeadsetService.connect(mCurrentDevice));
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
+        mCurrentDevice = getTestDevice(0);
+        assertThat(mHeadsetService.connect(mCurrentDevice)).isTrue();
         when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
-        when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                .thenReturn(BluetoothProfile.STATE_CONNECTED);
+        when(mStateMachines.get(mCurrentDevice).getConnectionState()).thenReturn(STATE_CONNECTED);
         when(mStateMachines.get(mCurrentDevice).getConnectingTimestampMs())
                 .thenReturn(SystemClock.uptimeMillis());
-        Assert.assertEquals(
-                Collections.singletonList(mCurrentDevice), mHeadsetService.getConnectedDevices());
+        assertThat(mHeadsetService.getConnectedDevices()).isEqualTo(List.of(mCurrentDevice));
         mHeadsetService.onConnectionStateChangedFromStateMachine(
-                mCurrentDevice,
-                BluetoothProfile.STATE_DISCONNECTED,
-                BluetoothProfile.STATE_CONNECTED);
+                mCurrentDevice, STATE_DISCONNECTED, STATE_CONNECTED);
         mHeadsetService.setActiveDevice(mCurrentDevice);
 
         when(mStateMachines.get(mCurrentDevice).getHfpCallAudioPolicy())
@@ -1306,7 +1232,7 @@ public class HeadsetServiceTest {
                                         BluetoothSinkAudioPolicy.POLICY_ALLOWED)
                                 .setInBandRingtonePolicy(BluetoothSinkAudioPolicy.POLICY_ALLOWED)
                                 .build());
-        Assert.assertEquals(true, mHeadsetService.isInbandRingingEnabled());
+        assertThat(mHeadsetService.isInbandRingingEnabled()).isTrue();
 
         when(mStateMachines.get(mCurrentDevice).getHfpCallAudioPolicy())
                 .thenReturn(
@@ -1317,25 +1243,66 @@ public class HeadsetServiceTest {
                                 .setInBandRingtonePolicy(
                                         BluetoothSinkAudioPolicy.POLICY_NOT_ALLOWED)
                                 .build());
-        Assert.assertEquals(false, mHeadsetService.isInbandRingingEnabled());
+        assertThat(mHeadsetService.isInbandRingingEnabled()).isFalse();
+    }
+
+    @Test
+    public void testIncomingCallDeviceConnect_InbandRingStatus() {
+        when(mDatabaseManager.getProfileConnectionPolicy(
+                        any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
+        mCurrentDevice = getTestDevice(0);
+        connectDeviceHelper(mCurrentDevice);
+
+        when(mStateMachines.get(mCurrentDevice).getDevice()).thenReturn(mCurrentDevice);
+        when(mStateMachines.get(mCurrentDevice).getConnectionState()).thenReturn(STATE_CONNECTED);
+
+        when(mSystemInterface.isRinging()).thenReturn(true);
+        mHeadsetService.setActiveDevice(mCurrentDevice);
+
+        verify(mNativeInterface).setActiveDevice(mCurrentDevice);
+        verify(mStateMachines.get(mCurrentDevice))
+                .sendMessage(HeadsetStateMachine.CONNECT_AUDIO, mCurrentDevice);
+        verify(mStateMachines.get(mCurrentDevice))
+                .sendMessage(eq(HeadsetStateMachine.SEND_BSIR), eq(1));
+    }
+
+    @Test
+    public void testIncomingCallWithDeviceAudioConnected() {
+        ArrayList<BluetoothDevice> connectedDevices = new ArrayList<>();
+        when(mDatabaseManager.getProfileConnectionPolicy(
+                        any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
+        for (int i = 2; i >= 0; i--) {
+            mCurrentDevice = getTestDevice(i);
+            connectDeviceHelper(mCurrentDevice);
+            connectedDevices.add(mCurrentDevice);
+        }
+
+        mHeadsetService.setActiveDevice(connectedDevices.get(1));
+        when(mStateMachines.get(connectedDevices.get(1)).getAudioState())
+                .thenReturn(BluetoothHeadset.STATE_AUDIO_CONNECTED);
+
+        when(mSystemInterface.isRinging()).thenReturn(true);
+        mHeadsetService.setActiveDevice(connectedDevices.get(2));
+
+        verify(mNativeInterface).setActiveDevice(connectedDevices.get(2));
+        verify(mStateMachines.get(connectedDevices.get(2)), atLeast(1))
+                .sendMessage(eq(HeadsetStateMachine.SEND_BSIR), eq(0));
     }
 
     private void addConnectedDeviceHelper(BluetoothDevice device) {
         mCurrentDevice = device;
         when(mDatabaseManager.getProfileConnectionPolicy(
                         any(BluetoothDevice.class), eq(BluetoothProfile.HEADSET)))
-                .thenReturn(BluetoothProfile.CONNECTION_POLICY_UNKNOWN);
-        Assert.assertTrue(mHeadsetService.connect(device));
+                .thenReturn(CONNECTION_POLICY_UNKNOWN);
+        assertThat(mHeadsetService.connect(device)).isTrue();
         when(mStateMachines.get(device).getDevice()).thenReturn(device);
-        when(mStateMachines.get(device).getConnectionState())
-                .thenReturn(BluetoothProfile.STATE_CONNECTING);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTING, mHeadsetService.getConnectionState(device));
-        when(mStateMachines.get(mCurrentDevice).getConnectionState())
-                .thenReturn(BluetoothProfile.STATE_CONNECTED);
-        Assert.assertEquals(
-                BluetoothProfile.STATE_CONNECTED, mHeadsetService.getConnectionState(device));
-        Assert.assertTrue(mHeadsetService.getConnectedDevices().contains(device));
+        when(mStateMachines.get(device).getConnectionState()).thenReturn(STATE_CONNECTING);
+        assertThat(mHeadsetService.getConnectionState(device)).isEqualTo(STATE_CONNECTING);
+        when(mStateMachines.get(mCurrentDevice).getConnectionState()).thenReturn(STATE_CONNECTED);
+        assertThat(mHeadsetService.getConnectionState(device)).isEqualTo(STATE_CONNECTED);
+        assertThat(mHeadsetService.getConnectedDevices()).contains(device);
     }
 
     /*
@@ -1351,6 +1318,20 @@ public class HeadsetServiceTest {
         doReturn(bondState).when(mAdapterService).getBondState(device);
         when(mDatabaseManager.getProfileConnectionPolicy(device, BluetoothProfile.HEADSET))
                 .thenReturn(priority);
-        Assert.assertEquals(expected, mHeadsetService.okToAcceptConnection(device, false));
+        assertThat(mHeadsetService.okToAcceptConnection(device, false)).isEqualTo(expected);
+    }
+
+    private void connectDeviceHelper(BluetoothDevice device) {
+        assertThat(mHeadsetService.connect(device)).isTrue();
+        verify(mObjectsFactory)
+                .makeStateMachine(
+                        device,
+                        mHeadsetService.getStateMachinesThreadLooper(),
+                        mHeadsetService,
+                        mAdapterService,
+                        mNativeInterface,
+                        mSystemInterface);
+        when(mStateMachines.get(device).getDevice()).thenReturn(device);
+        when(mStateMachines.get(device).getConnectionState()).thenReturn(STATE_CONNECTED);
     }
 }
